--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -4,4 +4,4 @@ do.jar=true
 file.reference.jython.jar=C:\\Java Libraries\\Jython\\jython.jar
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\Anonymous\\.netbeans\\7.1.2\\build.properties
+user.properties.file=C:\\Users\\Kamil\\AppData\\Roaming\\NetBeans\\7.3.1\\build.properties
