--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ repositories {
 }
 
 dependencies {
+	implementation 'com.googlecode.json-simple:json-simple:1.1.1'
 	testImplementation 'junit:junit:4.13.1'
 	testImplementation 'org.mockito:mockito-all:1.10.19'
 	testImplementation 'org.assertj:assertj-core:3.11.1'
